chore: align runtime to java 8 and boot 2.7